Grease Pencil Set Color Attribute does not work #98756

Closed
opened 2022-06-10 06:55:43 +02:00 by Erik G. Riebling · 14 comments

System Information
macOS Catalina Version 10.15.7
MacBook Pro (16-inch, 2019)
Processor 2.3 GHz 8-Core Intel Core i9
Memory 16 GB 2667 MHz DDR4
Startup Disk Macintosh HD
Graphics AMD Radeon Pro 5500M 4 GB
Intel UHD Graphics 630 1536 MB
Serial Number C02F34R5MD6N

Blender Version
Broken: 3.2.0
Worked: 2.93.4

Short description of error
While manually brushing the vertex colors onto the Grease Pencil vertices works absolutely fine (although with a bit of lag), Set Color Attribute is not coloring all the selected vertices automatically. It only works when the vertices are actually painted with the brush first, which is different from how it was in previous versions. As a result, I need to manually paint the vertices, which is both tedious and prone to errors. Even the Vertex Paint still maintained its Set Vertex Colors function by allowing me to paint the vertex colors automatically.

Exact steps for others to reproduce the error
Simply create a stroke in Grease Pencil. Then, enter Vertex Paint and use any of the Selection Mask options. Go into the Paint menu and select Set Color Attribute.

**System Information** macOS Catalina Version 10.15.7 **MacBook Pro (16-inch, 2019)** **Processor** 2.3 GHz 8-Core Intel Core i9 **Memory** 16 GB 2667 MHz DDR4 **Startup Disk** Macintosh HD **Graphics** AMD Radeon Pro 5500M 4 GB Intel UHD Graphics 630 1536 MB **Serial Number** C02F34R5MD6N **Blender Version** **Broken:** 3.2.0 **Worked:** 2.93.4 **Short description of error** While manually brushing the vertex colors onto the Grease Pencil vertices works absolutely fine (although with a bit of lag), Set Color Attribute is not coloring all the selected vertices automatically. It only works when the vertices are actually painted with the brush first, which is different from how it was in previous versions. As a result, I need to manually paint the vertices, which is both tedious and prone to errors. Even the Vertex Paint still maintained its Set Vertex Colors function by allowing me to paint the vertex colors automatically. **Exact steps for others to reproduce the error** Simply create a stroke in Grease Pencil. Then, enter Vertex Paint and use any of the Selection Mask options. Go into the Paint menu and select Set Color Attribute.

Added subscriber: @E-ManAnimates

Added subscriber: @E-ManAnimates

Added subscriber: @antoniov

Added subscriber: @antoniov

I cannot replicate with Blender 3.2 in Windows 11

VertexWeight.mp4

The assign button works as expected.

I cannot replicate with Blender 3.2 in Windows 11 [VertexWeight.mp4](https://archive.blender.org/developer/F13142978/VertexWeight.mp4) The assign button works as expected.
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

@antoniov I think this is about vertex colors not vertex groups. I can replicate the issue.

@antoniov I think this is about vertex colors not vertex groups. I can replicate the issue.

Added subscriber: @mendio

Added subscriber: @mendio

Right, the Set Color Attribute is not working as expected

image.png

Right, the Set Color Attribute is not working as expected ![image.png](https://archive.blender.org/developer/F13143239/image.png)

Added subscriber: @hamza-el-barmaki

Added subscriber: @hamza-el-barmaki

if i anderstand the issue well ,
i think its only works if the stroke already painted and we want replace the selected colored vertices automatically by set color attribute function ... if i am not wrong .
here the material is black . the black didn't changed even it is selected. so set color attribute act like replace brush but automatically by selection of vertices..
i wander if it possible to add function like that to not damage the material color because that will simplify selection of different vertex color and replace them by another color like this example "naming it like --Replace Color Attribute-- " awesome.
2022-06-10 12-39-03.mp4

that was really educatif for me this is the first time i use set color attribute ......

if i anderstand the issue well , i think its only works if the stroke already painted and we want replace the selected colored vertices automatically by set color attribute function ... if i am not wrong . here the material is black . the black didn't changed even it is selected. so set color attribute act like replace brush but automatically by selection of vertices.. i wander if it possible to add function like that to not damage the material color because that will simplify selection of different vertex color and replace them by another color like this example "naming it like --Replace Color Attribute-- " awesome. [2022-06-10 12-39-03.mp4](https://archive.blender.org/developer/F13143248/2022-06-10_12-39-03.mp4) that was really educatif for me this is the first time i use set color attribute ......
Antonio Vazquez self-assigned this 2022-06-10 15:18:27 +02:00

@mendio Understood! I was testing wrong operator... I think I have found the bug already.

@mendio Understood! I was testing wrong operator... I think I have found the bug already.

This issue was referenced by 9e04082c12

This issue was referenced by 9e04082c12b2e67b2f40afbac32754576858a889

This issue was referenced by 9cad614ad5

This issue was referenced by 9cad614ad59e0d2ea890e4399b2ca3266f23c4d5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98756
No description provided.