Fix T98756: GPencil Set Vertex Color Attribute does not color unpainted

The operator set the color but the factor of the mix value was not updated and as the default value was 0, the color was not vivible and only worked when the stroke was previously painted.